hphp/hack/test/typecheck/tconst/access_expand_error_1.php
<?hh // strict

class C {
  public type const TC = int;
  public C::TC::ERROR $test = 0;
}
